# rust_playground

.github/workflows/: rust-workflow.yml
02.HelloCargo/: Cargo.toml
02.HelloCargo/src/: main.rs
03.Types/: Cargo.toml
03.Types/src/: main.rs
04.If_statement_Loop/: Cargo.toml
04.If_statement_Loop/src/: main.rs
05.Ownership/src/: main.rs
06.Struct/src/: main.rs
07..Enum/src/: main.rs
08.Package/appSample/: Cargo.toml
08.Package/appSample/src/: main.rs
08.Package/lib/src/: lib.rs
08.Package/lib1/src/: lib.rs
08.Package/lib2/: Cargo.toml
08.Package/lib2/src/: lib.rs
08.Package/my-project/: Cargo.toml
08.Package/my-project/src/: lib.rs  main.rs
09.Collections/src/: main.rs
10.Exception/: Cargo.toml  hello.txt
10.Exception/src/: main.rs
11.1_lifecycle/: Cargo.toml
11.1_lifecycle/src/: main.rs
11.Generic/: Cargo.toml
11.Generic/src/: lib.rs  main.rs
12.testlib/: Cargo.toml
12.testlib/src/: lib.rs
13.grepSample/: Cargo.toml  myfile.txt
13.grepSample/src/: lib.rs  main.rs
14.callback/: Cargo.toml
14.callback/src/: iteratorlib.rs  lib.rs  main.rs
15.CargoLibrary/: Cargo.toml
15.CargoLibrary/src/: lib.rs  main.rs
16.Pointer/: Cargo.toml
16.Pointer/src/: main.rs
17.mutiple_thread/: Cargo.toml
17.mutiple_thread/src/: main.rs
18.mutex/src/: main.rs
19.oop_sample/: Cargo.toml
19.oop_sample/src/: lib.rs  main.rs
20.adv-trait/: Cargo.toml
20.adv-trait/src/: main.rs
LimitTracker/: Cargo.toml
LimitTracker/src/: lib.rs
atomic_example/: Cargo.toml
atomic_example/src/: lib.rs  main.rs
bitcask_example/: Cargo.toml
bitcask_example/src/: bitcask.rs  lib.rs
cbindgen_example/: Cargo.toml  Makefile  README.md  cbindgen.toml  main.c  rust_lib.h
cbindgen_example/src/: data_structure.rs  lib.rs  structure_utils.rs  utils.rs
ctrl_c_sample/: Cargo.toml
ctrl_c_sample/src/: main.rs
customer_error/: Cargo.toml
customer_error/src/: main.rs
dbaccess_sample/: Cargo.toml
dbaccess_sample/.sqlx/: query-6a34229cfe1eb14c64c44c6046301cf2d2aa1bee9df313150bf14548a278851f.json
dbaccess_sample/src/: main.rs
dns-client-sample/: Cargo.toml
dns-client-sample/src/: main.rs
docker_sandbox/: Cargo.toml
docker_sandbox/rootfs/lowdir/: json
docker_sandbox/rootfs/upperdir/: hello-world.txt
docker_sandbox/src/: lib.rs  main.rs
epoll_rs_example/: Cargo.toml
epoll_rs_example/src/: lib.rs  main.rs
exporter_failover/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.tools  README.md  docker-compose.yml
exporter_failover/scripts/: demo-failover.ps1  demo-failover.sh
exporter_failover/src/: api.rs  backfill.rs  config.rs  health.rs  leader.rs  lib.rs  main.rs  models.rs  realtime.rs  state.rs
exporter_failover/tests/: sticky_failover.rs
extension_sample/: Cargo.toml  extension_sample.control
extension_sample/src/: lib.rs
feature_lib/: Cargo.toml
feature_lib/src/: lib.rs  main.rs
forecast/: Cargo.toml
forecast/src/: lib.rs  main.rs
macro_builder/: Cargo.toml
macro_builder/src/: main.rs
macro_derive_example/: Cargo.toml  README.md
macro_derive_example/src/: main.rs
macro_example/: Cargo.toml
macro_example/src/: lib.rs  main.rs
marco_example/: Cargo.toml
marco_example/src/: lib.rs  main.rs
mini_tokio/: Cargo.toml
mini_tokio/src/: lib.rs  main.rs
minigrep/src/: lib.rs  main.rs
mockobject/: Cargo.toml
mockobject/src/: lib.rs
mod_compare/: Cargo.toml
mod_compare/benches/: mod_vs_and.rs
oom_example/: Cargo.toml  Readme.md
oom_example/src/: main.rs
parse_example/: Cargo.toml
parse_example/src/: lib.rs  main.rs
pg2any-example/: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
pg2any-example/src/: main.rs
pg_es_search_example/: .env  Cargo.toml  Dockerfile  Readme.md  docker-compose.yml
pg_es_search_example/src/: config.rs  db.rs  handlers.rs  main.rs  models.rs  search.rs
playground/src/: main.rs
playrefer/: Cargo.toml
playrefer/src/: main.rs
raft_example/: Cargo.toml  Dockerfile  README.md  SUMMARY.md  docker-compose.test.yml  docker-compose.yml
raft_example/.claude/: settings.local.json
raft_example/config/: node1.json  node2.json  node3.json
raft_example/raft_core/: Cargo.toml
raft_example/raft_kv/: Cargo.toml
raft_example/raft_kv/src/: kv.rs  lib.rs
raft_example/tests/: helpers.sh  run_all_tests.sh  test_01_normal_workflow.sh  test_02_leader_crash.sh  test_03_consensus.sh
reactor_rs_example/: Cargo.toml
reactor_rs_example/src/: executor.rs  lib.rs  main.rs  poll.rs  reactor.rs  registry.rs
redis_aysn_vs_sync/: Cargo.toml  PERFORMANCE_ANALYSIS.md  README.md  docker-compose.yml  run_tests.ps1  run_tests.sh  test_project.ps1
redis_aysn_vs_sync/examples/: concepts.rs
redis_aysn_vs_sync/src/: main.rs  utils.rs
rust_ffi/: Cargo.toml
rust_ffi/c-lib/: hello.c
rust_ffi/src/: build.rs  main.rs
task_sharedata_tokio/: Cargo.toml
task_sharedata_tokio/src/: main.rs
tokio_example/: Cargo.toml
tokio_example/src/: main.rs
topk_flink_example/: .dockerignore  Cargo.toml  Dockerfile.rust  README.md  docker-compose.yml
topk_flink_example/common/: Cargo.toml
topk_flink_example/common/src/: lib.rs
topk_flink_example/flink_job/: Dockerfile  pom.xml
topk_flink_example/flink_job/src/main/java/com/example/topk/: TopKJob.java
topk_flink_example/producer/: Cargo.toml
topk_flink_example/producer/src/: main.rs
topk_flink_example/query_api/: Cargo.toml
topk_flink_example/query_api/assets/: index.html
topk_flink_example/query_api/src/: main.rs
trpl-async/: Cargo.toml
trpl-async/src/: main.rs
trpl-feature/: Cargo.toml
trpl-feature/src/: main.rs
unsafe_sample/: Cargo.toml
unsafe_sample/src/: main.rs
webFullstack/: Cargo.toml
webFullstack/httpserver/: Cargo.toml
webserver_sample/: 404.html  Cargo.toml  hello.html
webserver_sample/src/: lib.rs  main.rs
ws/webservice/: .env  Cargo.toml
ws/webservice/src/: errors.rs  handlers.rs  models.rs  routers.rs  state.rs
ws/webservice/src/db/: dbaccess.rs
ws/webservice/src/handlers/: course.rs  general.rs
ws/webservice/src/models/: course.rs
(+198 files in other folders)
