[package]
name = "dbaccess_sample"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dotenvy = "0.15.0"
serde = {version = "1.0.207", features = ["derive"]}
serde_json = "1.0.124"
sqlx = {version = "0.8.0", features = ["runtime-tokio", "postgres", "json","uuid"]}
tokio = { version = "1.39.2" , features = ["rt", "macros"]}
uuid = { version = "1.1", features = ["serde", "v4"] }
