[package]
name = "oom_example"
version = "0.1.0"
edition = "2024"

[dependencies]
jemallocator = { version = "0.5.0", features = ["profiling"] }
jemalloc-ctl = "0.5.0"

[dependencies.jemalloc-sys]
version = "0.5.0+5.3.0"
features = ["stats", "profiling", "unprefixed_malloc_on_supported_platforms"]

[profile.release]
debug = true
