[package]
name = "pg_es_search_example"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "=4.9.0"
actix-rt = "=2.10.0"
sqlx = { version = "=0.8.2", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
elasticsearch = "=8.15.0-alpha.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "=0.11.5"
url = "2"
bytes = "1"
