[package]
name = "raft_kv"
version = "0.1.0"
edition = "2021"
description = "A distributed key/value store built on raft_core"

[[bin]]
name = "raft-server"
path = "src/bin/server.rs"

[[bin]]
name = "raft-client"
path = "src/bin/client.rs"

[[bin]]
name = "raft-test-client"
path = "src/bin/test_client.rs"

[dependencies]
raft_core = { path = "../raft_core" }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = "0.3.17"
